fixed pmd:UnnecessaryLocalBeforeReturn
SVN-Revision: 15503